--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-range": "^1.3.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "swiper": "^11.1.14",
